--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 	<hr/>
 	<p>The encoded URLs for CSS are JS are:<br/>
 	CSS: &lt;type="text/css" href="<span th:text="@{~/css/sb2cachebuster.css}"></span>" rel="stylesheet"&gt;<br/>
-	JS: &lt;script src="<span th:text="@{~/js/sb2cachebuster.js}"></span>"></script>
+	JS: &lt;script src="<span th:text="@{~/js/sb2cachebuster.js}"></span>"&gt;&lt;/script&gt;
 	</p>
 	<button onclick="javascript:clickMe()">Click Me (calls a method in the included javascript)</button>
 	<p>Visit <a href="https://sunitkatkar.blogspot.com" target="_blank">my blog.</a> Thank you</p>
